2012-04-27  MORIOKA Tomohiko  <tomo@zinbun.kyoto-u.ac.jp>

	* README.ja (MAKEIT.BAT): Modify for apel-ja@lists.chise.org.

2012-04-27  MORIOKA Tomohiko  <tomo@zinbun.kyoto-u.ac.jp>

	* README.ja, README.en: Remove descriptions about CVS and add
	description about the new Git repository.

2012-04-27  MORIOKA Tomohiko  <tomo@zinbun.kyoto-u.ac.jp>

	* README.en (make.bat (for MS-DOS family)): Modify for
	apel-en@lists.chise.org.

2012-04-26  MORIOKA Tomohiko  <tomo@zinbun.kyoto-u.ac.jp>

	* README.ja, README.en (Bug reports): Modify for
	apel-{en|ja}@lists.chise.org.

2011-06-17  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mcs-20.el (detect-mime-charset-region): (Emacs23 or later) Do
	not check whether `charsets-mime-charset-alist' contains non
	charset symbol.

	* mcs-e20.el (charsets-mime-charset-alist): Remove non charset
	symbol for Emacs 23 and later.

2010-10-06  MORIOKA Tomohiko  <tomo@zinbun.kyoto-u.ac.jp>

	* mcs-xm.el (charsets-mime-charset-alist):
	- Don't use `japanese-jisx0208-1990' for `iso-2022-jp'
	- Don't use `iso-2022-jp-3'
	- Use `utf-8' instead of `shift_jis' for
	  '(ascii latin-jisx0201 katakana-jisx0201 japanese-jisx0208-1990)
	- Don't use `iso-2022-jp-2'


2010-06-15  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* APEL: Version 10.8 released.

	* apel-ver.el (apel-ver): Change APEL version to 10.8.

2010-03-19  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mcs-20.el (detect-mime-charset-region): Do not care priority of
	charsets on Emacs 23 and later.

2010-02-13  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* EMU-ELS (emu-modules): Add setting for GNU Emacs 23 or later.

	* invisible.el: In GNU Emacs 23, inv-19.el overrides builtin
	function `invisible-p'.  To fix the bug, require `inv-23' when
	running with GNU Emacs 23 or later.

	* inv-23.el: New file [copied from inv-19.el, but `invisible-p' is
	removed].

	[Contributed by David Maus <maus.david@gmail.com>]

2008-09-06  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>
